criação do documento do heatmap

--- a/docs/Base/1.2.4.Lexicos.md
+++ b/docs/Base/1.2.4.Lexicos.md
@@ -43,19 +43,6 @@
 
 ---
 
-### Agendar Sessão  
-<a id="agendar-sessao"></a>
-
-| **Campo**         | **Descrição**                                                                                                                                                 |
-|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| **Nome**          | Agendar Sessão                                                                                                                                                 |
-| **Classificação** | Verbo                                                                                                                                                          |
-| **Sinônimos**     | Marcar atividade, Programar sessão                                                                                                                             |
-| **Noção**         | Ação do [Usuário](#usuario) de reservar um horário para participar de uma [Sessão de Autocuidado](#sessao-de-autocuidado) oferecida pela plataforma.       |
-| **Impacto**       | Facilita o planejamento e a organização das atividades, incentivando a prática regular de autocuidado e melhorando a gestão de tempo dos [Usuários](#usuario). |
-
----
-
 ### Administrador  
 <a id="administrador"></a>
 
@@ -69,6 +56,32 @@
 
 ---
 
+### Agendar Sessão  
+<a id="agendar-sessao"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Agendar Sessão                                                                                                                                                 |
+| **Classificação** | Verbo                                                                                                                                                          |
+| **Sinônimos**     | Marcar atividade, Programar sessão                                                                                                                             |
+| **Noção**         | Ação do [Usuário](#usuario) de reservar um horário para participar de uma [Sessão de Autocuidado](#sessao-de-autocuidado) oferecida pela plataforma.       |
+| **Impacto**       | Facilita o planejamento e a organização das atividades, incentivando a prática regular de autocuidado e melhorando a gestão de tempo dos [Usuários](#usuario). |
+
+---
+
+### Alimentação  
+<a id="alimentacao"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Alimentação                                                                                                                                                 |
+| **Classificação** | Conceito/Objeto                                                                                                                                                        |
+| **Sinônimos**     | Nutrição, Dieta                                                                                                                                            |
+| **Noção**         | Conjunto de orientações e informações sobre ingestão de alimentos, nutrientes e planejamento de refeições.                                                                 |
+| **Impacto**       | Auxilia na escolha de cardápios balanceados e no registro de dietas, melhorando a saúde e o acompanhamento nutricional.                              |
+
+---
+
 ### Bem-Estar  
 <a id="bem-estar"></a>
 
@@ -79,6 +92,19 @@
 | **Sinônimos**     | Qualidade de vida, Saúde integral                                                                                                                             |
 | **Noção**         | Estado físico, mental e emocional que a plataforma “Eu Me Amo” busca promover por meio dos seus conteúdos e funcionalidades.                                   |
 | **Impacto**       | Serve como objetivo central do sistema, influenciando a criação, organização e priorização de todas as funcionalidades e conteúdos desenvolvidos.             |
+
+---
+
+### Comparador de Alimentos  
+<a id="comunidade"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Comunidade                                                                                                                                                    |
+| **Classificação** | Objeto                                                                                                                                                        |
+| **Sinônimos**     | Tabela nutricional                                                                                                                                                  |
+| **Noção**         | Ferramenta que busca e exibe dados nutricionais de diferentes alimentos para comparação.                                                  |
+| **Impacto**       | Auxilia o [Usuários](#usuario) a escolher opções mais saudáveis, comparando calorias, macros e vitaminas.                                                 |
 
 ---
 
@@ -121,6 +147,32 @@
 
 ---
 
+### Dica de Saúde  
+<a id="dicas-de-saude"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Dica de Saúde                                                                                                                                             |
+| **Classificação** | Objeto                                                                                                                                                        |
+| **Sinônimos**     | Recomendações de bem‑estar                                                                                                                                        |
+| **Noção**         | Conteúdo informativo (texto, imagem ou vídeo) que orienta o [Usuário](#usuário) sobre hábitos saudáveis e prevenção de doenças.                                    |
+| **Impacto**       | Educar o [Usuário](#usuário), promovendo mudanças de comportamento que aumentem a qualidade de vida e o engajamento com a plataforma.                                            |
+
+---
+
+### Ergonomia  
+<a id="ergonomia"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Ergonomia                                                                                                                                   |
+| **Classificação** | Conceito                                                                                                                                                        |
+| **Sinônimos**     | Adaptação ergonômica                                                                                                                                          |
+| **Noção**         | Conjunto de princípios para ajustar o ambiente de trabalho/estudo às características físicas e cognitivas do [Usuário](#usuário).                        |
+| **Impacto**       | Melhorar o conforto e a produtividade, orientando configurações de mobiliário e postura adequadas a cada situação.                            |
+
+---
+
 ### Estatísticas de Engajamento  
 <a id="estatisticas-de-engajamento"></a>
 
@@ -134,6 +186,19 @@
 
 ---
 
+### Exercício  
+<a id="exercicio"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Exercício                                                                                                                                   |
+| **Classificação** | Conceito                                                                                                                                                        |
+| **Sinônimos**     | Movimento, Atividade física                                                                                                                                          |
+| **Noção**         | Ato de realizar um movimento específico (p. ex. agachamento, alongamento) com finalidade de saúde ou condicionamento.                        |
+| **Impacto**       | Disponibiliza [Vídeos Educativos](#video-educativo) e instruções passo a passo, garantindo execução correta e segura.                            |
+
+---
+
 ### Feedback  
 <a id="feedback"></a>
 
@@ -144,6 +209,58 @@
 | **Sinônimos**     | Comentário, Avaliação                                                                                                                                         |
 | **Noção**         | Opinião ou resposta fornecida pelo [Usuário](#usuario) após interagir com uma funcionalidade ou conteúdo.                                                     |
 | **Impacto**       | Fundamental para a melhoria contínua da plataforma, permitindo ajustes e personalizações que aprimoram a experiência do usuário.                              |
+
+---
+
+### Ficha de Dieta  
+<a id="ficha-de-dieta"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Ficha de Dieta                                                                                                                                                     |
+| **Classificação** | Objeto                                                                                                                                                         |
+| **Sinônimos**     | Diário alimentar                                                                                                                                             |
+| **Noção**         | Formulário onde o [Usuário](#usuario) registra o que comeu em cada refeição, quantidades e horários.                                          |
+| **Impacto**       | Permite acompanhar macro e micronutrientes, facilitando a avaliação nutricional e ajustes na dieta.          |
+
+---
+
+### Ficha de treino  
+<a id="ficha-de-treino"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Ficha de Treino                                                                                                                                                     |
+| **Classificação** | Objeto                                                                                                                                                         |
+| **Sinônimos**     | Plano de treino                                                                                                                                             |
+| **Noção**         | Registro estruturado dos exercícios, séries, repetições e cargas utilizadas pelo [Usuário](#usuario).                                          |
+| **Impacto**       | Facilita o acompanhamento da evolução de força e resistência, possibilitando ajustes de carga e volume de treino.          |
+
+---
+
+### Lembrete  
+<a id="lembrete"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Lembrete                                                                                                                                                     |
+| **Classificação** | Objeto                                                                                                                                                         |
+| **Sinônimos**     | Alerta, Aviso                                                                                                                                            |
+| **Noção**         | [Notificação](#notificar) programada para lembrar o [Usuário](#usuario) de ações como levantar, alongar, beber água ou dormir.                                          |
+| **Impacto**       | Mantém o [Usuário](#usuario) engajado e com hábitos saudáveis, prevenindo períodos prolongados de sedentarismo ou desidratação.          |
+
+---
+
+### Monitoramento  
+<a id="monitoramento"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Monitoramento                                                                                                                                                     |
+| **Classificação** | Verbo/Objeto                                                                                                                                                         |
+| **Sinônimos**     | Acompanhamento                                                                                                                                             |
+| **Noção**         | Processo automático de coleta de dados sobre [Postura](#postura), consumo de água e qualidade do sono ao longo do dia.                                          |
+| **Impacto**       | Permite gerar [Relatórios](#relatório) periódicos, analisando tendências e propondo ajustes personalizados.          |
 
 ---
 
@@ -173,6 +290,19 @@
 
 ---
 
+### Postura  
+<a id="postura"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Postura                                                                                                                                               |
+| **Classificação** | Conceito/Objeto                                                                                                                                               |
+| **Sinônimos**     | Posição corporal                                                                                                                                       |
+| **Noção**         | A forma como o [Usuário](#usuario) posiciona seu corpo ao sentar, levantar ou realizar atividades diárias.                                    |
+| **Impacto**       | Detectar desvios em tempo real e fornecer [Feedback](#feedback) corretivo, reduzindo risco de lesões e desconfortos musculares.          |
+
+---
+
 ### Plano de Autocuidado  
 <a id="plano-de-autocuidado"></a>
 
@@ -196,6 +326,20 @@
 | **Sinônimos**     | Documentar hábitos                                                                                                                                             |
 | **Noção**         | Ação de cadastrar ou atualizar as atividades diárias e práticas de autocuidado realizadas pelo [Usuário](#usuario).                                             |
 | **Impacto**       | Permite o acompanhamento do progresso do [Usuário](#usuario) e a análise de seus hábitos, fomentando a melhoria contínua de sua rotina de autocuidado.      |
+
+---
+
+### Relatório  
+<a id="relatorio"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Relatório                                                                                                                                              |
+| **Classificação** | Objeto                                                                                                                                                         |
+| **Sinônimos**     | Sumário, Análise                                                                                                                                             |
+| **Noção**         | Documento gerado periodicamente (diário, semanal) que consolida métricas de [Postura](#postura), atividades e hábitos de autocuidado.                                             |
+| **Impacto**       | Oferece visão clara do progresso e pontos de atenção, orientando ajustes na rotina de autocuidado.      |
+
 
 ---
 
@@ -225,6 +369,19 @@
 
 ---
 
+### Treino  
+<a id="treino"></a>
+
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Treino                                                                                                                                             |
+| **Classificação** | Objeto                                                                                                                                                        |
+| **Sinônimos**     | Sessão de exercícios                                                                                                            |
+| **Noção**         | Sequência de exercícios físicos planejados para atingir objetivos de força, flexibilidade ou condicionamento.                                                   |
+| **Impacto**       | Gera [Relatórios](#relatorio) de desempenho e permite salvar [Ficha de Treinos](#ficha-de-treino), estimulando a prática regular e mensurável.                   |
+
+---
+
 ### Usuário  
 <a id="usuario"></a>
 
@@ -235,11 +392,74 @@
 | **Sinônimos**     | Pessoa, Cliente                                                                                                                                               |
 | **Noção**         | Pessoa que acessa o sistema. Pode ser [Administrador](#administrador) ou assumir outras funções conforme o contexto da plataforma.                          |
 | **Impacto**       | Realiza as tarefas e interage com as funcionalidades, sendo o principal beneficiário dos serviços oferecidos pela plataforma.                                |
-```
 
+---
 
-# Histórico de Versão
+### Vídeo Educativo  
+<a id="video-educativo"></a>
 
-| Data       | Versão | Descrição             | Autor(es)          | Revisor(es) | Detalhes da Revisão|
-|------------|--------|-----------------------|--------------------| :---:|:---:|
-| 07.04.2025 | `1.0`    | Criação do documento  | [Carlos Henrique][carlinn1] | [][] | |
+| **Campo**         | **Descrição**                                                                                                                                                 |
+|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Nome**          | Vídeo Educativo                                                                                                                                                       |
+| **Classificação** | Objeto                                                                                                                                                        |
+| **Sinônimos**     | Tutorial em vídeo                                                                                                                                               |
+| **Noção**         | Conteúdo audiovisual que demonstra práticas corretas de [Postura](#postura), [Exercício](#exercício) ou dicas de saúde.                          |
+| **Impacto**       | Realiza as tarefas e interage com as funcionalidades, sendo o principal beneficiário dos serviços oferecidos pela plataforma.                                |
+
+---
+### Mindfulness  
+<a id="mindfulness"></a>
+
+| **Campo**         | **Descrição** |
+|-------------------|---------------|
+| **Nome**          | Mindfulness |
+| **Classificação** | Conceito |
+| **Sinônimos**     | Atenção plena |
+| **Noção**         | Prática de foco no momento presente, de forma consciente e sem julgamentos. |
+| **Impacto**       | Contribui para o [Bem-Estar Mental](#bem-estar), ajudando na redução do estresse e aumentando a concentração dos [Usuários](#usuario). |
+
+---
+
+### Meditação  
+<a id="meditacao"></a>
+
+| **Campo**         | **Descrição** |
+|-------------------|---------------|
+| **Nome**          | Meditação |
+| **Classificação** | Verbo/Objeto |
+| **Sinônimos**     | Prática meditativa |
+| **Noção**         | Exercício mental que visa acalmar a mente, focar na respiração ou em mantras, promovendo relaxamento. |
+| **Impacto**       | Melhora a qualidade do sono, reduz ansiedade e colabora com o equilíbrio emocional dos [Usuários](#usuario). |
+
+---
+
+### Registro de Humor  
+<a id="registro-humor"></a>
+
+| **Campo**         | **Descrição** |
+|-------------------|---------------|
+| **Nome**          | Registro de Humor |
+| **Classificação** | Objeto |
+| **Sinônimos**     | Diário de emoções |
+| **Noção**         | Ferramenta utilizada pelo [Usuário](#usuario) para anotar como se sente ao longo do dia. |
+| **Impacto**       | Ajuda a identificar padrões emocionais e auxilia profissionais e o próprio usuário na compreensão do bem-estar psicológico. |
+
+---
+
+### Hidratação  
+<a id="hidratacao"></a>
+
+| **Campo**         | **Descrição** |
+|-------------------|---------------|
+| **Nome**          | Hidratação |
+| **Classificação** | Conceito/Estado |
+| **Sinônimos**     | Consumo de água |
+| **Noção**         | Ato de ingerir líquidos suficientes ao longo do dia para manter o corpo equilibrado. |
+| **Impacto**       | Promove saúde física e cognitiva, e é reforçado por [Notificações](#notificar) programadas como “Hora de se hidratar!”. |
+## Histórico de Versão
+
+| Versão | Data | Descrição | Autor | Revisor
+|:-:|:-:|:-:|:-:|:-:|
+|`1.0`| 07/04/2025 | Criação do documento  | [Carlos Henrique]() | | 
+|`1.1`| 07/04/2025 | Adição de novas palavras ao Léxico  | [Arthur Fonseca](https://github.com/arthurfonsecaa) | | 
+|`1.2`| 08/04/2025 | Adição de novas palavras ao Léxico  | [Pablo Serra](https://github.com/Pabloserrapxx) | | 
