--- a/docs/Base/1.5.6.Tabela-Requisitos.md
+++ b/docs/Base/1.5.6.Tabela-Requisitos.md
@@ -1,42 +1,57 @@
 # __Tabela de Requisitos__
 
-| **Nº** | **Requisito Sintetizado (Norma Padrão)**                                                                  |
-|-------|------------------------------------------------------------------------------------------------------------|
-| 1     | O usuário deve receber notificações personalizáveis.                                                       |
-| 2     | O sistema deve disponibilizar exercícios e dicas para melhoria da postura e bem-estar físico.             |
-| 3     | O sistema deve disponibilizar vídeos ilustrativos de execução correta dos exercícios.                      |
-| 4     | O sistema deve permitir o cadastro de usuários.                                                             |
-| 5     | O sistema deve permitir o registro de perfis para especialistas.                                            |
-| 6     | O sistema deve permitir o registro de perfis para usuários comuns.                                          |
-| 7     | O sistema deve disponibilizar conteúdos educativos em vídeos, podcasts, artigos e repostagens.             |
-| 8     | O usuário deve poder aplicar filtros para selecionar conteúdos por tipo, assunto ou tendências.            |
-| 9     | O sistema deve permitir o registro do humor do usuário.                                                    |
-| 10    | O sistema deve gerar relatórios com base no humor registrado.                                              |
-| 11    | O sistema deve sugerir ações com base nos relatórios de humor.                                             |
-| 12    | O sistema deve permitir o registro de planos de treino.                                                    |
-| 13    | O especialista deve poder acompanhar planos de treino personalizados dos usuários.                         |
-| 14    | O sistema deve disponibilizar um calendário interativo com treinos e alimentação.                          |
-| 15    | O sistema deve oferecer um timer para controle de atividades.                                              |
-| 16    | O sistema deve exibir um catálogo de especialistas.                                                        |
-| 17    | O sistema deve permitir o agendamento de consultas ou consultorias com especialistas.                      |
-| 18    | O sistema deve emitir alertas de hidratação.                                                               |
-| 19    | O sistema deve permitir o gerenciamento de metas de hidratação.                                            |
-| 20    | O sistema deve permitir o gerenciamento de metas de treino.                                                |
-| 21    | O sistema deve permitir o gerenciamento de metas de calorias.                                              |
-| 22    | O especialista deve poder acompanhar planos alimentares personalizados dos usuários.                       |
-| 23    | O sistema deve disponibilizar tabelas nutricionais para consulta.                                          |
-| 24    | O sistema deve permitir a comparação de alimentos com base nas tabelas nutricionais.                       |
-| 25    | O sistema deve oferecer conteúdos sobre mitos e verdades relacionados à saúde e bem-estar.                 |
-| 26    | O usuário deve conseguir registrar seus dados de saúde.                                                    |
-| 27    | O sistema deve permitir o acompanhamento do progresso com base nas metas.                                  |
-| 28    | O sistema deve gerar relatório semanal com o resultado do progresso.                                       |
-| 29    | O sistema deve disponibilizar uma comunidade com feed interativo entre os usuários.                        |
-| 30    | O sistema deve permitir o monitoramento de hábitos diários.                                                |
-| 31    | O sistema deve permitir o uso de um diário pessoal.                                                        |
-| 32    | O sistema deve oferecer receitas para apoio nutricional.                                                  |
-| 33    | O sistema deve incluir práticas de mindfulness.                                                            |
-| 34    | O sistema deve incluir práticas de meditação.                                                              |
-| 35    | O sistema deve sugerir alongamentos para o bem-estar do usuário.                                           |
-| 36    | O sistema deve acompanhar o ciclo menstrual do usuário.                                                   |
-| 37    | O sistema deve permitir a contagem de calorias.                                                             |
-| 38    | O sistema deve permitir a criação e participação em desafios motivacionais.                               |
+## __Introdução__
+
+Este documento apresenta a tabela de requisitos gerada a partir da reunião [6](../Projeto/Iniciativas%20Extras/ata_06.md), em que o grupo como um todo executou um Brainstorm e analisou o artefato do [Mapa Mental](../Base/1.2.1.Mapa-mental.md#mapa-mental), [análise de concorrência](../Base/1.2.5.Publico-Alvo.md#análise-de-concorrência) e [Rich Picture](../Base/1.2.2.RichPicture.md#rich-picture), buscando atender às necessidades dos usuários em áreas como postura, nutrição, saúde mental, exercícios físicos e acompanhamento especializado.
+
+A seguir a tabela de requisitos :
+
+| **Setor de Interesse**                     | **Nº** | **Tipo** | **Requisito**                                                                                          |
+|-------------------------------------------|--------|----------|---------------------------------------------------------------------------------------------------------|
+| 🧍‍♀️ Gerenciamento de Usuários e Perfis    | 4      | RF       | O sistema deve permitir o cadastro de usuários.                                                         |
+|                                           | 5      | RF       | O sistema deve permitir o registro de perfis para especialistas.                                        |
+|                                           | 6      | RF       | O sistema deve permitir o registro de perfis para usuários comuns.                                      |
+| 🔔 Notificações e Alertas                 | 1      | RFN      | O usuário deve receber notificações personalizáveis.                                                    |
+|                                           | 18     | RF       | O sistema deve emitir alertas de hidratação.                                                            |
+| 🧘 Postura, Exercícios e Bem-Estar Físico | 2      | RF       | O sistema deve disponibilizar exercícios e dicas para melhoria da postura e bem-estar físico.          |
+|                                           | 3      | RF       | O sistema deve disponibilizar vídeos ilustrativos de execução correta dos exercícios.                   |
+|                                           | 12     | RF       | O sistema deve permitir o registro de planos de treino.                                                 |
+|                                           | 13     | RF       | O especialista deve poder acompanhar planos de treino personalizados dos usuários.                      |
+|                                           | 14     | RF       | O sistema deve disponibilizar um calendário interativo com treinos e alimentação.                       |
+|                                           | 15     | RF       | O sistema deve oferecer um timer para controle de atividades.                                           |
+|                                           | 20     | RF       | O sistema deve permitir o gerenciamento de metas de treino.                                             |
+|                                           | 35     | RF       | O sistema deve sugerir alongamentos para o bem-estar do usuário.                                        |
+| 🧠 Saúde Mental e Emocional               | 9      | RF       | O sistema deve permitir o registro do humor do usuário.                                                 |
+|                                           | 10     | RF       | O sistema deve gerar relatórios com base no humor registrado.                                           |
+|                                           | 11     | RF       | O sistema deve sugerir ações com base nos relatórios de humor.                                          |
+|                                           | 31     | RF       | O sistema deve permitir o uso de um diário pessoal.                                                     |
+|                                           | 33     | RF       | O sistema deve incluir práticas de mindfulness.                                                         |
+|                                           | 34     | RF       | O sistema deve incluir práticas de meditação.                                                           |
+| 🍎 Nutrição e Alimentação                | 19     | RF       | O sistema deve permitir o gerenciamento de metas de hidratação.                                         |
+|                                           | 21     | RF       | O sistema deve permitir o gerenciamento de metas de calorias.                                           |
+|                                           | 22     | RF       | O especialista deve poder acompanhar planos alimentares personalizados dos usuários.                    |
+|                                           | 23     | RF       | O sistema deve disponibilizar tabelas nutricionais para consulta.                                       |
+|                                           | 24     | RF       | O sistema deve permitir a comparação de alimentos com base nas tabelas nutricionais.                    |
+|                                           | 25     | RF       | O sistema deve oferecer conteúdos sobre mitos e verdades relacionados à saúde e bem-estar.              |
+|                                           | 26     | RF       | O usuário deve conseguir registrar seus dados de saúde.                                                 |
+|                                           | 32     | RF       | O sistema deve oferecer receitas para apoio nutricional.                                                |
+|                                           | 37     | RF       | O sistema deve permitir a contagem de calorias.                                                         |
+| 📊 Progresso e Metas                      | 27     | RF       | O sistema deve permitir o acompanhamento do progresso com base nas metas.                               |
+|                                           | 28     | RF       | O sistema deve gerar relatório semanal com o resultado do progresso.                                    |
+| 💬 Interação e Comunidade                | 29     | RF       | O sistema deve disponibilizar uma comunidade com feed interativo entre os usuários.                     |
+|                                           | 38     | RF       | O sistema deve permitir a criação e participação em desafios motivacionais.                             |
+| 📅 Especialistas e Acompanhamento        | 16     | RF       | O sistema deve exibir um catálogo de especialistas.                                                     |
+|                                           | 17     | RF       | O sistema deve permitir o agendamento de consultas ou consultorias com especialistas.                   |
+| 🧩 Personalização e Conteúdo             | 7      | RF       | O sistema deve disponibilizar conteúdos educativos em vídeos, podcasts, artigos e repostagens.         |
+|                                           | 8      | RFN      | O usuário deve poder aplicar filtros para selecionar conteúdos por tipo, assunto ou tendências.         |
+| 📅 Rotina e Hábitos                      | 30     | RF       | O sistema deve permitir o monitoramento de hábitos diários.                                             |
+|                                           | 36     | RF       | O sistema deve acompanhar o ciclo menstrual do usuário.                                                 |
+
+
+---
+
+## Histórico de Versão
+
+| Versão | Data | Descrição | Autor | Revisor
+|:-:|:-:|:-:|:-:|:-:|
+|`1.0`| 09/04/2025 | Criação do documento| [LuizaMaluf](https://github.com/LuizaMaluf)|  |
