--- a/docs/Base/1.5.7.Priorizacao.md
+++ b/docs/Base/1.5.7.Priorizacao.md
@@ -1,3 +1,17 @@
+# __Priorização de Requisitos__
+
+## __Introdução__
+
+Este documento tem como objetivo apresentar a priorização dos requisitos elicitados. A prirização é uma etapa essencial do processo de Engenharia de Requisitos, pois permite identificar quais funcionalidades são fundamentais para o escopo mínimo do sistema, bem como aquelas que podem ser implementadas em versões futuras, de acordo com os objetivo do projeto e as necessidades dos usuários.
+
+## __Metodologia__
+
+Para a priorização de requisitos, foi utilizada a técnica **MoSCoW**, wue classifica cada item com base em sua importância relativa para os usuários e stakeholders. A sigla MoSCoW representa a seguintes categorias:
+
+- **MUST (M) -** Requisitos que **devem serser implementados** no escopo mínimo do sistema. Sem eles, o sistema não atende às suas funções principais.
+- **Should (S) -** Requisitos importantes, mas que podem ser implementados posteriormente em comprometer o funcionamento inicial do sistema.
+
+
 | **Nº** | **Requisito Sintetizado (Norma Padrão)**                                                                  | **Prioridade (MoSCoW)** |
 |-------|------------------------------------------------------------------------------------------------------------|--------------------------|
 | 1     | O usuário deve receber notificações personalizáveis.                                                       | Must                     |
